# sp1-c-kzg

lib/: Cargo.toml
lib/src/: kzg_trust_setup.rs  kzg_utils.rs  lib.rs  rust_kzg_utils.rs  std_utils.rs
program/: Cargo.toml  build.sh
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
