[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
c-kzg = {git = "https://github.com/smtmfft/c-kzg-4844", branch = "risc0/remove-file-io", default-features = false }
kzg_utils = {path="../lib"}